--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -44,11 +44,11 @@
             </div>
 
           </div>
-          {% endfor %
+          {% endfor %}
 
           <!-- WHAT THE FUCKING FUCK IS WRONG WITH THIS BUTTON, WHY DOES IT NOT CORRECTLY SENT ARGS TO CREATE_NEW_TOPIC?!??!?!?! -->
         </div>
-        <a class="btn btn-primary btn-lg btn-block" href="{{ redirect(url_for('create_new_topic', user=g.user.username, topic_parent=g.user.username)) }}">Create New Topic!</a>
+        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('create_new_topic', topic_parent=g.user.username) }}">Create New Topic!</a>
       </div>
     </div>
   </div>
