--- a/app/static/css/template.css
+++ b/app/static/css/template.css
@@ -1,5 +1,4 @@
 body{
-	background-color: #d9d9d9;
 	margin: 12px;
     font-family: Garamond;
 }
@@ -37,6 +36,18 @@ hr{
 
 .well{
     padding: 12px;
-    background-color: #99bd91;
     border: dotted 1px #440088;
+}
+
+form textarea#description {
+  width: 100%;
+  height: 100px;
+  background-color: #fafafa;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+  border: 1px solid #cccccc;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 1.1em;
 }
