--- a/app/templates/create_new_topic.html
+++ b/app/templates/create_new_topic.html
@@ -5,10 +5,10 @@
 <div class="row">
     <div class="col-md-5">
         <div class="panel panel-primary">
-            <div class="panel-heading" style="padding-bottom:0px;">
-                <h3 class="panel-title" style="font-size:25px;">Create New Topic<h3>
+            <div class="panel-heading">
+                <h3 class="panel-title" style="font-size:25px;">Create New Topic</h3>
                 {% if topic_parent != g.user.username %}
-                    <h5>Child topic of <a style="color:#FFFFFF" href="url_for('topic', topic_name=topicParent, topicParent=UserTopic.query.filter(UserTopic.title == topic_parent).first().parent">{{ topic_parent }}</a></h5>
+                    <h4>Child topic of <a style="color:#FFFFFF" href="url_for('topic', topic_name=topicParent, topicParent=UserTopic.query.filter(UserTopic.title == topic_parent).first().parent">{{ topic_parent }}</a></h4>
                 {% else %}
 
                 {% endif %}
@@ -25,9 +25,6 @@
                             </div>
                             <div class="panel-body">
                                 {{form.topicTitle(size=30, class = "span3", value=topic ,placeholder="Enter title here...")}}<br>
-                                {% for error in form.errors.topicTitle %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
                             </div>
                         </div>
                     </div>
@@ -38,10 +35,7 @@
                                 <h3 class="panel-title" style="font-size:18px;">Description</h3>
                             </div>
                             <div class="panel-body">
-                                {{ form.description(maxlength="255", placeholder="Enter description here...")}}<br>
-                                {% for error in form.errors.description %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
+                                {{ form.description(maxlength="255", style="resize:none", placeholder="Enter description here...")}}<br>
                             </div>
                         </div>
                     </div>
@@ -53,9 +47,6 @@
                             </div>
                             <div class="panel-body">
                                 {{form.tags(size=30, class = "span3", value=tags, placeholder="tags (ex: python, IO, strings) ")}}<br>
-                                {% for error in form.errors.tags %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
                             </div>
                         </div>
                     </div>
