--- a/app/templates/edittopic.html
+++ b/app/templates/edittopic.html
@@ -5,19 +5,15 @@
 <div class="row">
     <div class="col-md-5">
         <div class="panel panel-primary">
-            <div class="panel-heading" style="padding-bottom:0px;">
-                <p>{{ topic_parent, topic_name }}</p>
-                {% if topic_name != None %}
-                    <h3 class="panel-title" style="font-size:25px;">Edit {{ topic }}</h3>
-                {% else %}
-                    <h3 class="panel-title" style="font-size:25px;">Create New Topic<h3>
-                    <h5>Child topic of <a style="color:#FFFFFF" href="url_for('topic', topic_name=topic_parent, topic_parent=UserTopic.query.filter(UserTopic.title == topic_parent).first().parent">{{ topic_parent }}</a></h5>
+            <div class="panel-heading">
+                <h3 class="panel-title" style="font-size:25px;">Edit Topic: {{ topic.title }}</h3>
+                {% if topic.parent != g.user.username %}
+                    <h5>Child topic of <a style="color:#FFFFFF" href="url_for('topic', topic_name=topic_parent, topic_parent=UserTopic.query.filter(UserTopic.title == topic_parent).first().parent">{{ topic.parent }}</a></h5>
                 {% endif %}
             </div>
             <div class="panel-body">
                 <form accept-charset="UTF-8" role="form" method="post">
                 {{form.hidden_tag()}}
-                    
                     <!-- topic title  -->
                     <div class="form-group {% if form.errors.username %} error {% endif %}">
                         <div class="panel panel-default">
@@ -25,10 +21,7 @@
                                 <h3 class="panel-title" style="font-size:18px;">Topic Title</h3>
                             </div>
                             <div class="panel-body">
-                                {{form.topicTitle(size=30, class = "span3", value=topic ,placeholder="Enter title here...")}}<br>
-                                {% for error in form.errors.topicTitle %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
+                                {{ form.topicTitle(size=30, class = "span3") }}<br>
                             </div>
                         </div>
                     </div>
@@ -39,10 +32,7 @@
                                 <h3 class="panel-title" style="font-size:18px;">Description</h3>
                             </div>
                             <div class="panel-body">
-                                {{ form.description(class="span3", placeholder="Enter description here...")}}<br>
-                                {% for error in form.errors.description %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
+                                {{ form.description(class="span3", style="resize:none;") }}<br>
                             </div>
                         </div>
                     </div>
@@ -53,10 +43,7 @@
                                 <h3 class="panel-title" style="font-size:18px;">Tags</h3>
                             </div>
                             <div class="panel-body">
-                                {{form.tags(size=30, class = "span3", value=tags, placeholder="tags (ex: python, IO, strings) ")}}<br>
-                                {% for error in form.errors.tags %}
-                                <span class="help-inline">[{{error}}]</span><br>
-                                {% endfor %}
+                                {{ form.tags(style="width:100%;") }}<br>
                             </div>
                         </div>
                     </div>
