--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -23,8 +23,8 @@
                             <div class="panel-heading">
                                 <h3 class="panel-title"><b>Description:<b></h3>
                             </div>
-                            <div class="panel-body" style="padding-top:5px; padding-bottom:0px;">
-                                <textarea readonly wrap="hard" style="width:100%; resize:none;" rows="10" name="topicDescription"></textarea>
+                            <div class="panel-body">
+                                {{ topic.description }}
                             </div>
                         </div>
                     </div>
