--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -18,6 +18,12 @@
 						{% endfor %}
                     </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
+                        {{form.email(size=30, class = "span3", placeholder="Email")}}<br>
+                        {% for error in form.errors.confirm %}
+                        <span class="help-inline">[{{error}}]</span><br>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group {% if form.errors.confirm %} error {% endif %}">
 						{{form.password(size=30, class = "span3", placeholder="Password")}}<br>
 						{% for error in form.errors.password %}
 						<span class="help-inline">[{{error}}]</span><br>
