--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,25 +12,25 @@
                 {{form.hidden_tag()}}
                 <fieldset>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
-						{{form.username(size=30, class = "span3", placeholder="Username")}}<br>
+						{{form.username(size=30, style="width:70%;", placeholder="Username")}}<br>
 						{% for error in form.errors.username %}
 						<span class="help-inline">[{{error}}]</span><br>
 						{% endfor %}
                     </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
-                        {{form.email(size=30, class = "span3", placeholder="Email")}}<br>
+                        {{form.email(size=30, style="width:70%;", placeholder="Email")}}<br>
                         {% for error in form.errors.confirm %}
                         <span class="help-inline">[{{error}}]</span><br>
                         {% endfor %}
                     </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
-						{{form.password(size=30, class = "span3", placeholder="Password")}}<br>
+						{{form.password(size=30, style="width:70%;", placeholder="Password")}}<br>
 						{% for error in form.errors.password %}
 						<span class="help-inline">[{{error}}]</span><br>
 						{% endfor %}
                     </div>
             		<div class="form-group {% if form.errors.confirm %} error {% endif %}">
-				        {{form.confirm(size=30, class = "span3", placeholder="Confirm Password")}}<br>
+				        {{form.confirm(size=30, style="width:70%;", placeholder="Confirm Password")}}<br>
 				        {% for error in form.errors.confirm %}
 				        <span class="help-inline">[{{error}}]</span><br>
 				        {% endfor %}
