--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -6,12 +6,12 @@
         <div class="panel panel-primary">
 
             <div class="panel-heading">
-                <h3 class="panel-title" style="font-size:25px;">
+                <h3 class="panel-title" id="topic_title" style="font-size:25px;">
                     <b>{{ topic.title }}<b>
                 </h3>
                 {% if topic_parent != None %}
                     Parent: 
-                    <a href="{{ url_for('topic', topic_name=topic_parent.title, topic_parent=topic_parent.parent) }}" style="color:white;">{{ topic_parent.title }}</a>
+                    <a id="parent_topic" href="{{ url_for('topic', topic_name=topic_parent.title, topic_parent=topic_parent.parent) }}" style="color:white;">{{ topic_parent.title }}</a>
                 {% endif %}
             </div>
 
@@ -43,7 +43,7 @@
                                         <a class="btn btn-default" href="{{ url_for('topic', topic_name=subTopic.title, topic_parent=subTopic.parent) }}">{{ subTopic.title }}</a>
                                     {% endfor %}
                                 {% else %}
-                                    <p class="btn btn-default">No subtopics yet... add one!</p>
+                                    <div style="padding:10px 10px 10px 10px">No subtopics yet... add one!</div>
                                 {% endif %}
                                 </div>
                             </div>
