Added basic help to the page.

--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -5,11 +5,15 @@
   <div class="panel-body">
     <h2 class="text-primary" style="font-size:25px">Login & Registration</h2>
     <p class="text-info">
-		Something Something this is how you log in & manage your account
+		To log into your account, simply click the “Login” button at the top of the screen. When visiting the home screen without being logged in you will be prompted to do so.
+		To register a new account, simply click on the “Register” button at the top of the page. You will be required to provide a user name, email, password, and a captcha code.
+
     </p>
 	<h2 class="text-primary" style="font-size:25px">Topics & Subtopics</h2>
     <p class="text-info">
-		First you make the topics, then you get the power.
+		The creation of topics is available from the home screen. Upon attempting to create a new topic, you will be prompted to enter a title, description, and a set of tags to help identify your topic. The topic title field and the topic description field cannot be left blank. 
+		When creating a subtopic, you will be prompted with a screen similar to the topic creation page. You cannot name a subtopic the same name as a parent topic and the same rules about blank title and blank description apply here as well.
+
     </p>
   </div>
 </div>
