Fixed edittopic: cannot create un-named topic now

--- a/app/templates/edittopic.html
+++ b/app/templates/edittopic.html
@@ -24,8 +24,8 @@
                             </div>
                             <div class="panel-body">
                                 {{ form.topicTitle(size=30, style="width=70%;") }}<br>
-                                {% for error in form.errors.password %}
-                                <span class="help-inline">[{{error}}]</span><br>
+                                {% for error in form.errors.topicTitle %}
+                                <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span><br>
                                 {% endfor %}
                             </div>
                         </div>
@@ -38,8 +38,8 @@
                             </div>
                             <div class="panel-body">
                                 {{ form.description(style="width=70%; resize:none;") }}<br>
-                                {% for error in form.errors.password %}
-                                <span class="help-inline">[{{error}}]</span><br>
+                                {% for error in form.errors.description %}
+                                <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span><br>
                                 {% endfor %}
                             </div>
                         </div>
@@ -52,8 +52,8 @@
                             </div>
                             <div class="panel-body">
                                 {{ form.tags(style="width:100%;") }}<br>
-                                {% for error in form.errors.password %}
-                                <span class="help-inline">[{{error}}]</span><br>
+                                {% for error in form.errors.tags %}
+                                <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span><br>
                                 {% endfor %}
                             </div>
                         </div>
