--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,25 +14,25 @@
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
 						{{form.username(size=30, style="width:70%;", placeholder="Username")}}<br>
 						{% for error in form.errors.username %}
-						<span class="help-inline">[{{error}}]</span><br>
+                        <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span>
 						{% endfor %}
                     </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
                         {{form.email(size=30, style="width:70%;", placeholder="Email")}}<br>
-                        {% for error in form.errors.confirm %}
-                        <span class="help-inline">[{{error}}]</span><br>
+                        {% for error in form.errors.email %}
+                        <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span>
                         {% endfor %}
                     </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
 						{{form.password(size=30, style="width:70%;", placeholder="Password")}}<br>
 						{% for error in form.errors.password %}
-						<span class="help-inline">[{{error}}]</span><br>
+                        <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span>
 						{% endfor %}
                     </div>
             		<div class="form-group {% if form.errors.confirm %} error {% endif %}">
 				        {{form.confirm(size=30, style="width:70%;", placeholder="Confirm Password")}}<br>
 				        {% for error in form.errors.confirm %}
-				        <span class="help-inline">[{{error}}]</span><br>
+                        <span style="color:red;" class="help-inline">{{ "* "+(error) }}</span>
 				        {% endfor %}
 				    </div>
                     <div class="form-group {% if form.errors.confirm %} error {% endif %}">
